--- a/package.json
+++ b/package.json
@@ -17,8 +17,14 @@
     "sass": "^1.15.2",
     "sass-loader": "^8.0.0"
   },
+  "dependencies": {
+    "@fortawesome/fontawesome-free": "^5.15.4",
+    "bootstrap": "^5.1.0",
+    "jquery": "^3.6.0",
+    "vide": "^0.5.1"
+  },
   "name": "Portfolio",
-  "description": "<p align=\"center\"><a href=\"https://laravel.com\" target=\"_blank\"><img src=\"https://raw.githubusercontent.com/laravel/art/master/logo-lockup/5%20SVG/2%20CMYK/1%20Full%20Color/laravel-logolockup-cmyk-red.svg\" width=\"400\"></a></p>",
+  "description": "Portifolio de Gabriel Souza Oliveira",
   "version": "1.0.0",
   "main": "webpack.mix.js",
   "directories": {
@@ -34,9 +40,5 @@
   "bugs": {
     "url": "https://github.com/GabrielAlvin/Portfolio/issues"
   },
-  "homepage": "https://github.com/GabrielAlvin/Portfolio#readme",
-  "dependencies": {
-    "@fortawesome/fontawesome-free": "^5.15.4",
-    "bootstrap": "^5.1.0"
-  }
+  "homepage": "https://github.com/GabrielAlvin/Portfolio#readme"
 }
