--- a/public/mix-manifest.json
+++ b/public/mix-manifest.json
@@ -1,7 +1,9 @@
 {
-    "/css/app.css": "/css/app.css?id=f6e060b445d0734c36be",
-    "/css/style.css": "/css/style.css?id=db638023d70efedff5f3",
+    "/css/app.css": "/css/app.css?id=03c9cf9ee60573501264",
+    "/css/style.css": "/css/style.css?id=ad6e4be02ed08790c9f7",
     "/js/bootstrap.blundle.js": "/js/bootstrap.blundle.js?id=d382dcd48a3c12c6d2d2",
+    "/js/jquery.js": "/js/jquery.js?id=2849239b95f5a9a2aea3",
+    "/js/jquery.vide.js": "/js/jquery.vide.js?id=7ce14b1bc14b8447b0c2",
     "/webfonts/fa-brands-400.eot": "/webfonts/fa-brands-400.eot?id=0868992b7c56298026b7",
     "/webfonts/fa-brands-400.svg": "/webfonts/fa-brands-400.svg?id=1d5619cd804367cefe6d",
     "/webfonts/fa-brands-400.ttf": "/webfonts/fa-brands-400.ttf?id=9fefebd385ff8e0973f1",
