--- a/public/mix-manifest.json
+++ b/public/mix-manifest.json
@@ -1,9 +1,10 @@
 {
-    "/css/app.css": "/css/app.css?id=03c9cf9ee60573501264",
-    "/css/style.css": "/css/style.css?id=976299083506e04a3afd",
+    "/css/app.css": "/css/app.css?id=3a4837a0a261935c6a3c",
+    "/css/style.css": "/css/style.css?id=034aea3b5e3a7768e211",
     "/js/bootstrap.blundle.js": "/js/bootstrap.blundle.js?id=d382dcd48a3c12c6d2d2",
     "/js/jquery.js": "/js/jquery.js?id=2849239b95f5a9a2aea3",
     "/js/jquery.vide.js": "/js/jquery.vide.js?id=7ce14b1bc14b8447b0c2",
+    "/js/main.js": "/js/main.js?id=881520877936f985290e",
     "/webfonts/fa-brands-400.eot": "/webfonts/fa-brands-400.eot?id=0868992b7c56298026b7",
     "/webfonts/fa-brands-400.svg": "/webfonts/fa-brands-400.svg?id=1d5619cd804367cefe6d",
     "/webfonts/fa-brands-400.ttf": "/webfonts/fa-brands-400.ttf?id=9fefebd385ff8e0973f1",
